--- a/photo_backend/Gemfile
+++ b/photo_backend/Gemfile
@@ -19,7 +19,9 @@ gem 'rack-cors'
 # Use Redis adapter to run Action Cable in production
 # gem 'redis', '~> 4.0'
 # Use Active Model has_secure_password
-# gem 'bcrypt', '~> 3.1.7'
+gem 'bcrypt', '~> 3.1.7'
+gem "jwt","~> 2.1"
+gem 'active_model_serializers', '~>0.10.7'
 
 # Use Active Storage variant
 # gem 'image_processing', '~> 1.2'
